--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
