--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.17.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
