--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.17.0",
     "js-cookie": "^3.0.5",
