--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
